--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,3 +123,46 @@ a:hover {
     padding-top: 14px;
     color: white;
 }
+
+.main_banner {
+    background-image: url('../../images/img2.png');
+    background-size: auto;
+    background-repeat: no-repeat;
+    height: 548px;
+    width: auto;
+}
+
+.main_links {
+    width: 100%;
+    height: 60px;
+    align-self: self-end;
+}
+
+.main_top_links {
+    padding-left: 60px;
+}
+
+.main_links_top {
+    color: white;
+    font-size: 17px;
+    font-weight: bold;
+}
+
+.main_links_col_padding_top {
+    padding-top: 50px;
+    padding-left: 7px;
+    padding-right: 7px;
+}
+
+.main_links_col_icon_padding_top {
+    padding-top: 40px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.main_links_col_sperater_padding_top {
+    padding-top: 40px;
+    padding-left: 2px;
+    padding-right: 2px;
+}
+
